--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,10 +22,12 @@
     -->
 
     <!--googlefonts-->
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
-
-    <script src="https://js.stripe.com/v3/"></script>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <!-- <script src="https://js.stripe.com/v3/"></script>
+     -->
     <title>My App</title>
 
   </head>
